{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "TankMovement",
            "id": "5b3aecbc-2dc5-4276-8545-caad1a667647",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "23affdb2-0436-435b-a1cc-03484e14a52b",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "6ca4411b-1a7b-43b8-a2f7-56c6ab5c91ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncreaseGear",
                    "type": "Button",
                    "id": "313b954f-21e1-4c7c-915d-da13a034234d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DecreaseGear",
                    "type": "Button",
                    "id": "be759fe6-6cfd-4f3b-82e7-f42c338ab6ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurretRotate",
                    "type": "Value",
                    "id": "12e9ce37-f78d-4fc8-b60c-de4d2806f8a1",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2,ScaleVector2(x=2,y=2)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShellSwitch",
                    "type": "Button",
                    "id": "ad4f3900-b1c0-4e39-aec6-106056e75a69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomADS",
                    "type": "Button",
                    "id": "e9d0d277-eecc-4e6f-acfe-0225cc7c53b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ff5e96bf-5203-4ccb-8185-db0bed639b88",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "62152f70-0826-4af4-ae61-8e74535e7937",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "40c7f29c-e514-424f-98b0-9189f9d40506",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "81dde49f-1ef2-4772-b6ee-f4005b39bd71",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cbfb3294-61c0-4d2b-b63c-9bed4e8a7597",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b754ef64-9bcc-4cbe-ade5-ef1086c6a463",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5915e918-35ef-4437-afd7-4c6bdb314519",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseGear",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5b82f05-5206-4bfb-9387-32d95e7f7077",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseGear",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8ee1fe1-6e35-42c0-9d36-346b833c4627",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShellSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bac6d537-baeb-4e28-b603-c3534dcc0241",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurretRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3723c74-dc09-4321-8be4-1cdef9821fd8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomADS",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TankInspection",
            "id": "9fdae027-3088-448a-b802-ae71285b08c4",
            "actions": [
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "247a3333-d24b-451f-b96e-9fa4782e989f",
                    "expectedControlType": "Delta",
                    "processors": "InvertVector2(invertX=false)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InspectTank",
                    "type": "Value",
                    "id": "1bdee200-bcc0-4c1d-b364-e2075823e52d",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2,ScaleVector2(x=2,y=2),InvertVector2(invertX=false)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AllowInspection",
                    "type": "Button",
                    "id": "50ac47e4-ab7a-4fc3-aaf2-19fb2ff13a3f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RepairTank",
                    "type": "Button",
                    "id": "08e1c2db-5908-4abf-97c7-b702c83c2f59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ff77ac7d-38c0-48c1-bbd5-2cea7cae1c3a",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d7fbbeb-e8c2-4a94-923b-9150b2c6977d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InspectTank",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "091e1318-a6cb-4d15-8151-dcd910bb8a2b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AllowInspection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51ee57de-2bdb-4cc2-8691-15d7b87f2819",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RepairTank",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "StateSwitcher",
            "id": "bdcc613d-9aa7-497d-9951-a18ce3dfedb2",
            "actions": [
                {
                    "name": "EnableADSView",
                    "type": "Button",
                    "id": "254b149d-6989-413d-9bb4-d65dfe4ba2d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnableThirdPersonView",
                    "type": "Button",
                    "id": "9f8dc3f7-368c-4650-bad3-fee64968f6d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnableInspectionView",
                    "type": "Button",
                    "id": "f06feee9-12ed-45af-833b-028fc6782ba3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnableHostileInspectionView",
                    "type": "Button",
                    "id": "a268df35-c39c-4d67-863b-fec876d13351",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitState",
                    "type": "Button",
                    "id": "7a68b1a9-7b34-4f89-b27c-874425f9d36f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3a57eab4-c981-4339-bd56-ad0a298a491b",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableADSView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9972fcd2-14f6-458e-9cd4-8a4afbd42c1a",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableThirdPersonView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33e5edeb-082c-4da5-b6d6-3bf99482c283",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableInspectionView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7df14631-b23d-4650-b6f3-b165e27ee79f",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableHostileInspectionView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f778525-3985-4b53-96c6-08022dcc9685",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitState",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}